test/errors/python_error/zs/module_names/structure_with_structure_clash_error.zs
package module_names.structure_with_structure_clash_error;

struct SOME_GOOD_NAME
{
    uint32 field;
};

struct SomeGoodName
{
    uint32 field;
};
